Whoops totally meant to commit this.

--- a/assets/v2/material/material-app-bar.scss
+++ b/assets/v2/material/material-app-bar.scss
@@ -80,7 +80,7 @@
             opacity: 0.75;
             text-transform: none;
 
-            &::before {
+            &:not(:empty)::before {
                 content: " / ";
                 opacity: 0.5;
             }
