Added hero styles
Gotta start making hero elements somewhere, and this feels like a good start

--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -28,6 +28,7 @@ $css-vars-use-native: true !default;
 @import "neon-tables.css";
 @import "neon-figure-cards";
 @import "neon-sidebar";
+@import "neon-hero";
 @import "neon-theme-selector";
 @import "neon-theme-visibility";
 @import "neon-footer";
