--- a/assets/v2/neon/neon-shared-vars.scss
+++ b/assets/v2/neon/neon-shared-vars.scss
@@ -10,10 +10,10 @@
 
 
 :root {
-    --white-theme-background-color: hsl(0,0, 100%);
-    --light-theme-background-color: hsl(0,0, 90%);
+    --white-theme-background-color: hsl(0, 0%, 100%);
+    --light-theme-background-color: hsl(0, 0%, 90%);
     --dark-theme-background-color: hsl(200, 19%, 18%);
-    --black-theme-background-color: hsl(0,0, 0);
+    --black-theme-background-color: hsl(0, 0%, 0%);
     --default-theme-background-color: var(--light-theme-background-color);
 
     --white-theme-foreground-color: hsl(0, 0%, 13%);
