Some updates for SubspaceTeaTi.me
- Added Neon context menu
- Added `.shows-child-on-hover` + `.shown-on-parent-hover`

- Changed body font size from `11px` to `11pt`
- Removed `!important` from app bar text color
- Some small tweaks to buttons
- Removed redundant inclusion of `material-structure-vars`
- Started `floats-and-clears` (not yet included anywhere)

--- a/assets/v2/material/material-app-bar.scss
+++ b/assets/v2/material/material-app-bar.scss
@@ -24,7 +24,7 @@
     &,
     * {
         // scss-lint:disable ImportantRule
-        color: var(--theme-text-on-primary-color-color) !important;
+        color: var(--theme-text-on-primary-color-color);// !important;
         // scss-lint:enable ImportantRule
     }
 
