--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -18,6 +18,7 @@ $css-vars-use-native: true !default;
 
 @import "neon-animation-renderer";
 @import "neon-brightness";
+@import "neon-context-menu";
 @import "neon-typography-vars";
 @import "neon-typography-renderer";
 @import "css-vars";
