--- a/assets/v2/neon/neon-structure-vars.scss
+++ b/assets/v2/neon/neon-structure-vars.scss
@@ -4,4 +4,4 @@
 // Variables used to define the structure of a webpage that uses the Neon theme system
 
 
-@import 'material-structure-vars';
+// @import 'material-structure-vars';
