--- a/assets/v2/neon/neon-typography-vars.scss
+++ b/assets/v2/neon/neon-typography-vars.scss
@@ -35,7 +35,7 @@ $font-size-h4: 18px !default;
 $font-size-h5: 18px !default;
 $font-size-h6: 16px !default;
 
-$font-size-body: 11px !default;
+$font-size-body: 11pt !default;
 $font-size-button: 14px !default;
 $font-size-dense-button: 13px !default;
 $font-size-large-button: 24px !default;
