Changed "Ben Leggiero" to "Ky Leggiero"

--- a/assets/v2/basics/JSlessness.scss
+++ b/assets/v2/basics/JSlessness.scss
@@ -3,7 +3,7 @@
 //
 // For improving the user experience when JS is or is not present
 //
-// Originally written 2020-07-18 by Ben Leggiero for Blue Husky Studios Stylesheets
+// Originally written 2020-07-18 by Ky Leggiero for Blue Husky Studios Stylesheets
 // https://github.com/BlueHuskyStudios/stylesheets
 //
 
