Fixed bug which mis-sized non-app-bar buttons

--- a/assets/v2/material/material-buttons.scss
+++ b/assets/v2/material/material-buttons.scss
@@ -67,7 +67,9 @@ $button-base-transition-property: transform, box-shadow, color, background, bord
     &,
     .app-bar & {
         @include _button-base();
+    }
 
+    .app-bar & {
         height: var(--app-bar-height-auto);
         min-width: var(--app-bar-height-auto);
     }
